# pil

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  settings.py
app/api/: dependencies.py  health.py  keys.py  proxy.py
app/core/: audit.py  auth.py  cache.py  embeddings.py  pipeline.py  rate_limit.py  tokenization.py
app/core/pii/: reversible_store.py  scrubber.py
app/core/pii/recognizers/: README.md  anthropic_key.py  aws_keys.py  db_connection.py  github_token.py  jwt.py  openai_key.py  private_key.py
app/core/providers/: anthropic.py  base.py  gemini.py  openai.py  registry.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py  0002_payload_nonces.py
app/observability/: logging.py  metrics.py  tracing.py
app/utils/: crypto.py  redis_client.py  request_id.py
config/: cache.yaml  otel-collector.yaml
tests/: conftest.py
tests/fixtures/dummy_recognizers/: widget_id.py
tests/integration/: conftest.py  test_cache_cross_org_isolation.py  test_migrations_roundtrip.py  test_pii_leakage_grep.py  test_pii_plugin_loader.py  test_proxy_e2e.py
tests/unit/: test_auth_helpers.py  test_cache_vector_literal.py  test_crypto.py  test_health_live.py  test_metrics_endpoint.py  test_pii_restore.py  test_provider_headers.py  test_provider_scrub_wiring.py  test_proxy_path_routing.py  test_recognizer_patterns.py  test_settings.py  test_tokenization.py
